Seccion de Ingles Reordenada

--- a/descripcion.html
+++ b/descripcion.html
@@ -9,6 +9,7 @@
 		<title>Acerca de mi - Portfolio Personal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="images/icons8-portfolio-30.png" type="image/x-icon" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -19,7 +20,7 @@
 				<a href="index.html" class="title">Cristobal Olave Herrera</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Inicio</a></li>
 						<li><a href="descripcion.html" class="active">Acerca de mi</a></li>
 						<li><a href="estudios.html">Estudios y Certificados</a></li>
 						<li><a href="experiencias.html">Experiencias Profesionales</a></li>
@@ -38,7 +39,7 @@
 							<ul>
 								<li>Lenguajes de Programación: Python, JavaScript, HTML, CSS, SQL, C#.</li>
 								<li>Herramientas: MYSQL, Docker, AWS, Microsoft Office, Bizagi, Powercenter, Selenium, Postman, Insomnia, Tableau, Jupyter, Git.</li>
-								<li>Framework: Django, NodeJS, Flask</li>
+								<li>Frameworks: Django, NodeJS, Flask</li>
 							</ul>
 							<p>He desempeñado mis funciones tanto en LEBOX, en donde me encargué de realizar pruebas unitarias tanto manuales como automatizadas en la página de agendamiento Medicap, como en QA Nova, en donde diseñe varios procesos automatizados en un software RPA llamado Robomotion, que se utiliza en conjunto con JavaScript para diseñar los procesos en sí.</p>
 						</div>
@@ -50,7 +51,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Powered by: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Cristobal Olave Herrera &copy 2024. Derechos Reservados.</li><li>Powered by: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="description.html">Cambiar a Ingles</a></li>
 					</ul>
 				</div>
 			</footer>
