--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Cristobal Olave Herrera- Portfolio Personal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="images/icons8-portfolio-30.png" type="image/x-icon" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/fe7e24edab.js" crossorigin="anonymous"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -24,6 +25,7 @@
 							<li><a href="#one">Acerca de Mi</a></li>
 							<li><a href="#two">Servicios</a></li>
 							<li><a href="#three">Contacto</a></li>
+							<li><a href="en.html">Cambiar a Inglés</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -37,7 +39,7 @@
 						<div class="inner">
 							<img src="images/Foto_2024-02-11_152442.jpg" alt="Cristobal Olave" width="200px" height="200px" />
 							<h1>Cristobal Olave Herrera</h1>
-							<p>Ingeniero Civil Informatico | Analista QA | Desarrollador Backend | Analisis de Datos</p>
+							<p>Ingeniero Civil Informatico | Analista QA | Desarrollador Backend | Analista de Datos</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Saber más</a></li>
 							</ul>
@@ -51,7 +53,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Descripción Personal</h2>
-									<p>Una breve descripción acerca de mí como persona.</p>
+									<p>Una breve descripción acerca de mí como profesional y como persona.</p>
 									<ul class="actions">
 										<li><a href="descripcion.html" class="button">Saber más</a></li>
 									</ul>
@@ -77,7 +79,7 @@
 									<h2>Experiencia Profesional</h2>
 									<p>Un resumen acerca de mis experiencias laborales y proyectos que he participado como ingeniero.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Saber más</a></li>
+										<li><a href="experiencias.html" class="button">Saber más</a></li>
 									</ul>
 								</div>
 							</div>
@@ -88,7 +90,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Servicios</h2>
-							<p>En esta sección, se pueden encontrar los Servicios que ofrezco.</p>
+							<p>En esta sección, se pueden encontrar los Servicios en los que he trabajado.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -98,7 +100,7 @@
 								<section>
 									<span class="icon solid major fa-bug-slash"></span>
 									<h3>Analisis QA</h3>
-									<p>Utilizo Selenium para automatizar las pruebas y así para realizar reportes y verificaciones.</p>
+									<p>Utilizo Selenium para automatizar las pruebas y así para realizar reportes y verificaciones en Jira y Trello.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-magnifying-glass-chart"></span>
